--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,7 @@
     {
       "matches": ["<all_urls>"],
       "js": ["content.js"],
+      "css": ["styles/tooltip.css"],
       "run_at": "document_idle",
       "world": "MAIN"
     }
