--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,28 @@ yarn-error.log*
 .eslintcache
 
 # Coverage directory
-coverage/ 
+coverage/
+
+# Editor directories
+.idea/
+.vscode/
+*.code-workspace
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Test coverage
+.nyc_output/ 
